--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #333;
+    background-color: #1a1a1a;
     color: #fff;
     height: 80px;
     padding: 0 40px;
