--- a/src/ProductCard.css
+++ b/src/ProductCard.css
@@ -3,7 +3,8 @@
     padding: 20px;
     flex-direction: column;
     align-items: center;
-    border-radius: 20px;
+    background-color: #2e2e2e;
+    border-radius: 12px;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
   }
   
