--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,31 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: #1a1a1a;
+    background-color: #333333;
+    color: #ffffff;
   }
   
   #root {
     height: 100%;
+  }
+  
+  footer {
+    background-color: #1a1a1a;
+    padding: 2rem;
+    text-align: center;
+  }
+
+  .products {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: rem;
+    margin-bottom: 120px;
+  }
+
+  .section-title {
+    color: #fff;
+    text-align: center;
+    margin-bottom: 40px;
   }
   
