--- a/src/index.css
+++ b/src/index.css
@@ -29,4 +29,15 @@ html, body {
     text-align: center;
     margin-bottom: 40px;
   }
+
+  input[type="text"] {
+    padding: 8px;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    border-radius: 4px;
+    margin-bottom: 16px;
+    width: 25%;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+  }
   
