--- a/webapp/src/css/ProductCard.css
+++ b/webapp/src/css/ProductCard.css
@@ -15,15 +15,15 @@
     margin-bottom: 20px;
   }
   
-  .product-details {
+  .productCard-details {
     text-align: center;
   }
   
-  .product-details h3 {
+  .productCard-details h3 {
     margin-bottom: 10px;
   }
   
-  .product-details p {
+  .productCard-details p {
     font-weight: bold;
   }
 
