Small update to shop page

--- a/webapp/src/css/Shop.css
+++ b/webapp/src/css/Shop.css
@@ -21,12 +21,12 @@
 .categories-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
+
     margin-bottom: 20px;
 }
 
 .category-box {
-    flex: 0 0 calc(100% / 7);
     text-align: center;
     border: 2px solid transparent;
     padding: 10px;
@@ -37,3 +37,5 @@
 .category-box.selected {
     border-color: yellow;
 }
+
+
