--- a/webapp/src/css/ProductPage.css
+++ b/webapp/src/css/ProductPage.css
@@ -36,7 +36,7 @@
 
 .product-details .product-info {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     margin-bottom: 20px;
 }
@@ -58,7 +58,7 @@
 }
 
 .product-details .product-button {
-    text-align: right;
+    text-align: center;
     background-color: #ffbd03;
     color: #333333;
     font-size: 16px;
