--- a/webapp/src/css/ProductCard.css
+++ b/webapp/src/css/ProductCard.css
@@ -1,10 +1,9 @@
 .product-card {
     display: flex;
-    padding: 20px;
+    padding: 0px;
     flex-direction: column;
     align-items: center;
-    background-color: #2e2e2e;
-    border-radius: 12px;
+    background-color: rgba(0, 0, 0, 0.3);
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
   }
   
@@ -31,6 +30,7 @@
   .product-card:hover {
     box-shadow: 0 12px 24px 0 rgba(0, 0, 0, 0.2);
     transform: translateY(-5px);
+      transform: scale(1.1);
   }
   
   .product-card:active {
