--- a/webapp/src/css/Testimonial.css
+++ b/webapp/src/css/Testimonial.css
@@ -1,9 +1,10 @@
 .testimonial {
-    border: 2px solid #fff;
+    border: 2px solid #000;
     padding: 20px;
     margin-bottom: 40px;
     color: #fff;
     line-height: 1.5;
+    background-color: rgba(0, 0, 0, 0.3);
   }
   
   
