--- a/webapp/src/css/index.css
+++ b/webapp/src/css/index.css
@@ -2,14 +2,15 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: #333333;
+    background: rgb(51,51,51);
+    background: linear-gradient(0deg, rgba(51,51,51,1) 0%, rgba(51,51,51,1) 18%, rgba(87,55,87,1) 50%, rgba(51,51,51,1) 82%, rgba(51,51,51,1) 100%);
     color: #ffffff;
   }
-  
+
   #root {
     height: 100%;
   }
-  
+
   footer {
     background-color: #1a1a1a;
     padding: 2rem;
