--- a/webapp/src/css/ProductPage.css
+++ b/webapp/src/css/ProductPage.css
@@ -1,24 +1,32 @@
+.product-page {
+    background-color: rgba(0,0,0,0.3);
+    justify-content: center;
+    margin-right: 400px;
+    margin-left: 400px;
+}
+
 .product-container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
     margin: 20px;
 }
 
 .product-image img {
+    display: flex;
     width: 800px;
     height: auto;
-    border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     margin-right: 20px;
 }
 
 .product-details {
     text-align: center;
-    width: 50%;
+    width: 20%;
+    height: 300px;
     margin-left: 20px;
-    background-color: #00000033;
-    border-radius: 8px;
+    background-color: rgba(0,0,0,0.3);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     padding: 20px;
 }
@@ -42,7 +50,8 @@
 }
 
 .product-details .product-price {
-    font-size: 24px;
+    font-size: 30px;
+    font-weight: normal;
     display: flex;
     align-items: center;
 }
@@ -64,8 +73,9 @@
     font-size: 16px;
     padding: 10px 20px;
     border: none;
-    border-radius: 8px;
     cursor: pointer;
+    width: 250px;
+    height: 50px;
 }
 
 .product-details .product-button:hover {
