--- a/webapp/src/css/Navbar.css
+++ b/webapp/src/css/Navbar.css
@@ -2,50 +2,56 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    align-content: center;
     background-color: #1a1a1a;
     color: #fff;
     height: 80px;
     padding: 0 40px;
-  }
-  
-  .logo a {
+}
+
+.navBarTitle {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.logo a {
     font-size: 3rem;
     font-weight: bold;
-  }
-  
-  .menu {
+}
+
+.menu {
     display: flex;
     list-style: none;
-  }
-  
-  .menu li {
+}
+
+.menu li {
     margin-right: 20px;
-  }
-  
-  .menu li a {
+}
+
+.menu li a {
     color: #fff;
     text-decoration: none;
-  }
-  
-  .dropdown {
+}
+
+.dropdown {
     position: relative;
-  }
-  
-  .dropdown-content {
+}
+
+.dropdown-content {
     display: none;
     position: absolute;
     z-index: 1;
     background-color: #333;
-  }
-  
-  .dropdown-content a {
+}
+
+.dropdown-content a {
     color: #fff;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-  }
-  
-  .dropdown:hover .dropdown-content {
+}
+
+.dropdown:hover .dropdown-content {
     display: block;
-  }
+}
   
