--- a/webapp/src/css/index.css
+++ b/webapp/src/css/index.css
@@ -3,7 +3,7 @@ html, body {
     padding: 0;
     height: 100%;
     background: rgb(51,51,51);
-    background: linear-gradient(0deg, rgba(51,51,51,1) 0%, rgba(51,51,51,1) 18%, rgba(87,55,87,1) 50%, rgba(51,51,51,1) 82%, rgba(51,51,51,1) 100%);
+    background: linear-gradient(0deg, rgba(51,51,51,1) 0%, rgba(51,51,51,1) 18%, rgba(180, 90, 0, 0.76) 50%, rgba(51,51,51,1) 82%, rgba(51,51,51,1) 100%);
     color: #ffffff;
   }
 
