--- a/webapp/src/css/SettingsPage.css
+++ b/webapp/src/css/SettingsPage.css
@@ -5,7 +5,7 @@
     text-align: center;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    background-color: #1a1a1a;
+    background-color: rgba(0, 0, 0, 0.3);
     color: #fff;
     margin-top: 5rem;
     margin-bottom: 5rem;
@@ -36,3 +36,20 @@
     color: black;
     border: 2px solid #f44336;
 }
+
+.order-section {
+    display: flex;
+    flex-direction: column;
+}
+
+.order-header {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    color: white;
+}
+
+.order-header h3 {
+    margin: 0;
+}
+
