--- a/webapp/src/css/ProductCard.css
+++ b/webapp/src/css/ProductCard.css
@@ -6,13 +6,14 @@
     background-color: rgba(0, 0, 0, 0.3);
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
   }
-  
-  .product-card img {
+
+.product-card img {
     width: 100%;
     max-width: 300px;
     height: auto;
+    background-size: cover;
     margin-bottom: 20px;
-  }
+}
   
   .productCard-details {
     text-align: center;
