--- a/webapp/src/css/ProductPage.css
+++ b/webapp/src/css/ProductPage.css
@@ -1,46 +1,29 @@
 .product-page {
-    background-color: rgba(0,0,0,0.3);
     justify-content: center;
-    margin-right: 400px;
-    margin-left: 400px;
+    margin-right: 15%;
+    margin-left: 15%;
+    background: rgba(0, 0, 0, 0.3);
 }
 
 .product-container {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     margin: 20px;
+    flex-wrap: wrap;
+}
+
+.product-image,
+.product-details {
+    flex: 1 0 48%;
+    margin: 1%;
 }
 
 .product-image img {
-    display: flex;
-    width: 800px;
-    height: auto;
+    max-width: 500px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    margin-right: 20px;
 }
 
-.product-details {
-    text-align: center;
-    width: 20%;
-    height: 300px;
-    margin-left: 20px;
-    background-color: rgba(0,0,0,0.3);
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    padding: 20px;
-}
-
-.product-details h1 {
-    font-size: 24px;
-    margin-bottom: 10px;
-}
-
-.product-details .product-description {
-    font-size: 16px;
-    line-height: 1.5;
-    margin-bottom: 20px;
-}
 
 .product-details .product-info {
     display: flex;
@@ -74,10 +57,42 @@
     padding: 10px 20px;
     border: none;
     cursor: pointer;
-    width: 250px;
     height: 50px;
 }
 
 .product-details .product-button:hover {
     background-color: rgba(255, 189, 3, 0.8);
+}
+
+.product-container {
+    display: flex;
+}
+
+.product-image {
+    flex: 1;
+}
+
+.product-details {
+    flex: 1;
+    text-align: center;
+    padding: 20px;
+}
+
+@media (max-width: 1200px) {
+    .product-container {
+        flex-direction: column;
+    }
+    .product-image, .product-details {
+        flex-basis: 100%;  /* On smaller screens, take up the full width */
+    }
+}
+
+@media (max-width: 800px) {
+    .product-image img {
+        max-width: 350px;
+    }
+}
+
+.product-title {
+    text-align: center;
 }
