--- a/webapp/src/css/AdminPanel.css
+++ b/webapp/src/css/AdminPanel.css
@@ -55,18 +55,6 @@
     cursor: pointer;
 }
 
-.overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 999; /* Ensure the overlay is displayed on top of other content */
-}
 
 .delete-confirmation {
     background-color: black;
@@ -95,4 +83,99 @@
     border: none;
     cursor: pointer;
 }
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+
+.form-container {
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 750px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form-container input {
+    margin-bottom: 10px;
+}
+
+.form-container label {
+    color: white;
+    font-size: 16px;
+}
+
+.form-container select {
+    height: 30px;
+    width: 200px;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+input[type="text"] {
+    height: 30px;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+input[type="number"] {
+    height: 35px;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+.form-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.form-buttons button {
+    margin-left: 10px;
+    width: 100px;
+    height: 40px;
+    border: none;
+    border-radius: 0;
+    background-color: #ccc;
+    color: #fff;
+    cursor: pointer;
+}
+
+.form-buttons button {
+    margin-left: 10px;
+    width: 100px;
+    height: 40px;
+    border: none;
+    border-radius: 0;
+    background-color: #ccc;
+    color: #fff;
+    cursor: pointer;
+}
+
+.form-buttons button[type="submit"] {
+    background-color: blue;
+}
+
+.form-buttons button[type="button"] {
+    background-color: red;
+}
+
+
 
