--- a/webapp/src/css/index.css
+++ b/webapp/src/css/index.css
@@ -2,35 +2,35 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
-    background: rgb(51,51,51);
-    background: linear-gradient(0deg, rgba(51,51,51,1) 0%, rgba(51,51,51,1) 18%, rgba(180, 90, 0, 0.76) 50%, rgba(51,51,51,1) 82%, rgba(51,51,51,1) 100%);
+    background: rgb(51, 51, 51);
+    background: linear-gradient(0deg, rgba(51, 51, 51, 1) 0%, rgba(51, 51, 51, 1) 18%, rgba(180, 90, 0, 0.76) 50%, rgba(51, 51, 51, 1) 82%, rgba(51, 51, 51, 1) 100%);
     color: #ffffff;
-  }
+}
 
-  #root {
+#root {
     height: 100%;
-  }
+}
 
-  footer {
+footer {
     background-color: #1a1a1a;
     padding: 2rem;
     text-align: center;
-  }
+}
 
-  .products {
+.products {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     margin-bottom: 120px;
-  }
+}
 
-  .section-title {
+.section-title {
     color: #fff;
     text-align: center;
     margin-bottom: 40px;
-  }
+}
 
-  input[type="text"] {
+input[type="text"] {
     padding: 8px;
     justify-content: center;
     align-items: center;
@@ -39,9 +39,22 @@ html, body {
     margin-bottom: 16px;
     width: 25%;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
-  }
+}
 
-  h2 {
+h2 {
     color: white;
-  }
-  
+}
+
+button {
+    background: #ffbd03;
+    border: none;
+    color: #333333;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
+button:hover {
+    background: #d29500;
+}
