--- a/webapp/src/css/index.css
+++ b/webapp/src/css/index.css
@@ -58,3 +58,16 @@ button {
 button:hover {
     background: #d29500;
 }
+
+.delete-wrapper {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.delete-button {
+    background-color: red;
+    padding: 5px 10px;
+    border: none;
+    cursor: pointer;
+}
