--- a/webapp/src/css/RegisterPage.css
+++ b/webapp/src/css/RegisterPage.css
@@ -8,7 +8,7 @@
   .register-form {
     width: 450px;
     padding: 20px;
-    background-color: #ffffff;
+    background-color: rgba(0, 0, 0, 0.5);
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   }
@@ -28,11 +28,11 @@
     display: block;
     font-weight: bold;
     margin-bottom: 5px;
-    color: black;
+    color: white;
   }
   
   .register-form .registerTitle {
-    color: black;
+    color: white;
     text-align: center;
     margin-bottom: 20px;
     font-size: 30px;
@@ -68,7 +68,7 @@
   }
   
   .register-form h2.registerTitle {
-    color: black;
+    color: white;
     text-align: center;
     margin-bottom: 20px;
   }
